--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ table#result tr td {
   background-color: #CCCCCC;
   width: 100%;
   margin: 1px;
-  font-size: 30pt;
+  font-size: 2em;
   text-align: center;
   vertical-align: middle;
 }
@@ -26,7 +26,7 @@ display: table;
   display:flex;
   align-items: center;
   justify-content:center;
-font-size: 20pt;
+font-size: 2em;
 color: white;
 border:  3px solid #FFFFFF;
 background-color: red;
